# aef-benchmark

./: .env.example  .gitignore  Pipfile  README.md  dashboard.py  evaluate_models.py  generate_dataset.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
evaluations/: evaluation_Via_Marianna_Dionigi_16_00193_Roma_RM_20250101_20251231_50_20250809_2051.csv  evaluation_Via_Marianna_Dionigi_16_00193_Roma_RM_20250901_20250915_50_20250809_1925.csv  evaluation_Via_Marianna_Dionigi_16_00193_Roma_RM_20250901_20251231_50_20250809_1847.csv  evaluation_Via_Ruggero_DAndreotto_19_06124_Perugia_PG_20250101_20251231_50_20250811_1230.csv  evaluation_Via_Ruggero_DAndreotto_19_06124_Perugia_PG_20250901_20250915_50_20250809_2004.csv  evaluation_Via_Ruggero_DAndreotto_19_06124_Perugia_PG_20250901_20251231_50_20250811_1155.csv
models/: ai_event.py  event_list.py
services/: ai_models_manager.py  csv_manager.py  evaluation_manager.py  locationiq_apis_manager.py  logging_manager.py
